<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_view_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <Button
                android:id="@+id/bt_reset"
                style="@style/ButtonTextStyle2_Selected_Primary"
                android:layout_width="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:text="@string/reset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/filter_view_stops_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/eye_color"
                android:textColor="@color/secondaryColor"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_reset" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:id="@+id/spHairColor"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filter_view_stops_tv"/>
            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/secondaryColorLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spHairColor" />

            <TextView
                android:id="@+id/filter_view_height_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/height"
                android:textColor="@color/secondaryColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/filter_view_stops_tv"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <SeekBar
                android:id="@+id/seebar_height"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="265"
                android:min="65"
                app:layout_constraintStart_toStartOf="@id/filter_view_height_tv"
                app:layout_constraintTop_toBottomOf="@id/filter_view_height_tv" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/secondaryColorLight"
                app:layout_constraintTop_toBottomOf="@id/seebar_height" />


            <TextView
                android:id="@+id/filter_view_mass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mass"
                android:textColor="@color/secondaryColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/filter_view_stops_tv"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <SeekBar
                android:id="@+id/seebar_mass"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="1360"
                android:min="15"
                app:layout_constraintStart_toStartOf="@id/filter_view_mass_tv"
                app:layout_constraintTop_toBottomOf="@id/filter_view_mass_tv" />

            <Button
                android:id="@+id/bt_apply"
                style="@style/ButtonTextStyle2_Selected_Primary"
                android:layout_width="160dp"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:text="@string/apply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seebar_mass" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>